# openclawbench

./: .env.example  CLAUDE.md  README.md  SETUP.md  cli.py  config.py  justfile  local_client.py  pyproject.toml  run.py  task_runner.py  telegram_auth.py  telegram_client.py
benchmarks/: README.md  ai_agent.py  base.py  daytona_workspace.py  remote_workspace.py  scenario_factory.py  skill_checker.py
benchmarks/scenarios/: __init__.py  compound_scenario.py  file_scenario.py  github_scenario.py  gmail_scenario.py  image_scenario.py  summarize_scenario.py  weather_scenario.py  web_scenario.py
benchmarks/setup/: file_setup.py  github_setup.py  gmail_setup.py  summarize_setup.py  web_setup.py
benchmarks/validators/: compound_validator.py  file_validator.py  github_validator.py  gmail_validator.py  image_validator.py  summarize_validator.py  weather_validator.py  web_validator.py
scripts/: export_harbor.py
tasks/compound/aggregate-and-report/environment/: setup_workspace.py
tasks/compound/fetch-and-compare/environment/: setup_workspace.py
tasks/compound/fetch-and-save/environment/: setup_workspace.py
tasks/compound/file-and-web/environment/: setup_workspace.py
tasks/compound/filter-and-save/environment/: setup_workspace.py
tasks/compound/multi-file-merge/environment/: setup_workspace.py
tasks/compound/summarize-and-count/environment/: setup_workspace.py
tasks/compound/transform-and-report/environment/: setup_workspace.py
tasks/compound/web-to-file/environment/: setup_workspace.py
tasks/file/advanced-log-analysis/: instruction.md  task.toml
tasks/file/data-transformation/: instruction.md  task.toml
tasks/file/data-validation-report/: instruction.md  task.toml
tasks/file/file-comparison/: instruction.md  task.toml
tasks/file/file-consolidation/: instruction.md  task.toml
tasks/file/file-modification/: instruction.md  task.toml
tasks/file/file-organization/: instruction.md  task.toml
tasks/file/multi-step-data-pipeline/: instruction.md  task.toml
tasks/file/recursive-file-search/: instruction.md  task.toml
tasks/gog-gmail/count-unread/: instruction.md  task.toml
tests/: test_config.py
(+62 files in other folders)
