[project]
name = "openclaw-telegram-client"
version = "0.1.0"
description = "Telegram client for OpenClaw bot benchmarking"
requires-python = ">=3.13"
dependencies = [
    "pyrogram>=2.0.0",
    "tgcrypto>=1.2.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pydantic-ai>=1.59.0",
    "paramiko>=4.0.0",
    "google-auth-oauthlib>=1.2.4",
    "google-auth-httplib2>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[project.scripts]
openclaw-tg = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"
